--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
 </head>
+
 <body>
     <h2>Log in</h2>
     <form action="/login" method="POST">
@@ -19,15 +21,10 @@
 
     <h4><a href="/loginadmin">Log in as Admin</a></h4>
 
-    <!-- <h2>Register</h2> -->
-    <!-- <form action="/register" method="POST">
-        <input type="text" name="firstName" placeholder="firstname">
-        <input type="text" name="surName" placeholder="surname">
-        <input type="email" name="email" placeholder="email">
-        <input type="password" name="password" placeholder="password">
-        <button type="submit">Sign up</button>
-    </form> -->
+    <h4><a href="/register">Don´t have an account?</a></h4>
+
 
 
 </body>
+
 </html>
