--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -1,37 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link rel="stylesheet" href="../public/main.css" />
-    <script src="../public/admin.js"></script>
+<%- include ("partial/header.ejs") %>
 
-</head>
 <body>
     <%- include ("partial/logout.ejs") %>
-    
+
     <div class="create-new-product-form">
 
-        <div class="create-new-product-form-header"><h2>Create new product</h2></div>
+        <div class="create-new-product-form-header">
+            <h2>Create new product</h2>
+        </div>
 
         <form action="/admin" class="createproduct" method="post">
 
             <div class="form-group">
                 <label for="title">Product title</label>
-                <input class="form-control" type="text" name="title"/>
+                <input class="form-control" type="text" name="title" />
             </div>
 
             <div class="form-group">
                 <label for="imgUrl">Image URL</label>
-                <input class="form-control" type="text" name="imgUrl"/>
+                <input class="form-control" type="text" name="imgUrl" />
             </div>
 
             <div class="form-group">
                 <label for="price">Price</label>
-                <input class="form-control" type="text" name="price"/>
+                <input class="form-control" type="text" name="price" />
             </div>
 
             <div class="form-group">
@@ -41,9 +35,9 @@
 
             <div class="form-group">
                 <label for="size">Size</label>
-                <input class="form-control" type="text" name="size"/>
+                <input class="form-control" type="text" name="size" />
             </div>
-            
+
             <div class="form-check">
                 <label class="form-check-label" for="newArrival">New arrival: </label>
                 <input class="form-check-input" type="checkbox" name="newArrival">
@@ -66,12 +60,12 @@
             <div class="form-button-container">
                 <button type="submit" class="btn btn-dark">Create product</button>
             </div>
-            
+
         </form>
     </div>
 
 
-<!-- 
+    <!-- 
     <form action="/admin" class="createproduct" method="post">
 
         <input type="text" name="title" placeholder="title" />
@@ -98,34 +92,32 @@
 
 
     <div class="all-products">
-        <div class="all-products-header"><h2>All products in database</h2></div>
+        <div class="all-products-header">
+            <h2>All products in database</h2>
+        </div>
         <% products.forEach((product) => {  %>
-            <div class="product">
-                <form action="/edit/<%= product._id %>" method="POST">
-                    <div class="admin-image-container">
-                        <img src="<%= product.imgUrl %>" alt="">
-                    </div>
-                    <p>Title: <input class="text-input" name="title" type="text" value="<%= product.title %>"></p>
-                    <p>imgUrl: <input class="text-input" name="imgUrl" type="text" value="<%= product.imgUrl %>"></p>
-                    <p>Price: <input class="text-input" name="price" type="text" value="<%= product.price %>"></p>
-                    <p>Description: <input class="text-input" name="description" type="text" value="<%= product.description %>"></p>
-                    <p>Size: <input class="text-input" name="size" type="text" value="<%= product.size %>"></p>
-                    <p>New arrival: <input name="newArrival" type="checkbox" <% if(product.newArrival){%>
-                        checked 
-                        <%} %> ></p>
-                    <p>Top seller: <input name="topSeller" type="checkbox" <% if(product.topSeller){%>
-                        checked 
-                        <%} %> ></p>
-                    <p>Male: <input name="male" type="checkbox" <% if(product.male){%>
-                        checked 
-                        <%} %> ></p>
-                    <p>Female: <input name="female" type="checkbox" <% if(product.female){%>
-                        checked 
-                        <%} %> ></p>
-                    <p class="edit-product-button-container"><button class="btn btn-dark" type="submit">Update product</button></p>
-                </form>
-            </div>
-     <%   }); %>
+        <div class="product">
+            <form action="/edit/<%= product._id %>" method="POST">
+                <div class="admin-image-container">
+                    <img src="<%= product.imgUrl %>" alt="">
+                </div>
+                <p>Title: <input class="text-input" name="title" type="text" value="<%= product.title %>"></p>
+                <p>imgUrl: <input class="text-input" name="imgUrl" type="text" value="<%= product.imgUrl %>"></p>
+                <p>Price: <input class="text-input" name="price" type="text" value="<%= product.price %>"></p>
+                <p>Description: <input class="text-input" name="description" type="text"
+                        value="<%= product.description %>"></p>
+                <p>Size: <input class="text-input" name="size" type="text" value="<%= product.size %>"></p>
+                <p>New arrival: <input name="newArrival" type="checkbox" <% if(product.newArrival){%> checked <%} %>>
+                </p>
+                <p>Top seller: <input name="topSeller" type="checkbox" <% if(product.topSeller){%> checked <%} %>></p>
+                <p>Male: <input name="male" type="checkbox" <% if(product.male){%> checked <%} %>></p>
+                <p>Female: <input name="female" type="checkbox" <% if(product.female){%> checked <%} %>></p>
+                <p class="edit-product-button-container"><button class="btn btn-dark" type="submit">Update
+                        product</button></p>
+            </form>
+        </div>
+        <%   }); %>
     </div>
 </body>
+
 </html>
