--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,12 +1,8 @@
 <h2>Register</h2>
-<form action="/register" method="post">
-
-    <input type="text" name="firstName">
-
-    <input type="text" name="surName">
-
-    <input type="email" name="email">
-    
-    <input type="password" name="password">
-    <button type="submit">Register</button>
+<form action="/register" method="POST">
+    <input type="text" name="firstName" placeholder="firstname">
+    <input type="text" name="surName" placeholder="surname">
+    <input type="email" name="email" placeholder="email">
+    <input type="password" name="password" placeholder="password">
+    <button type="submit">Sign up</button>
 </form>
