email and admin

--- a/views/adminUser.ejs
+++ b/views/adminUser.ejs
@@ -27,7 +27,7 @@
                 <%= user.email %>
             </div>
 
-            <div>Admin: <input name="admin" type="checkbox" <% if(user.admin){%> checked <%} %>>
+            <div>Admin: <input name="isAdmin" type="checkbox" <% if(user.isAdmin){%> checked <%} %>>
             </div>
 
         </form>
