--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,1 +1,10 @@
-about
+<%- include ("partial/header") %>
+
+
+<%- include ("partial/navbar") %>
+
+
+<%- include ("partial/logout") %>
+<h1>About Gecko</h1>
+
+<%- include ("partial/footer") %>
