--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -3,7 +3,9 @@
 <%- include ("partial/header.ejs") %>
 
 <body>
-    <%- include ("partial/logout.ejs") %>
+
+    <%- include ("partial/navbar") %>
+    <%- include ("partial/logout") %>
 
     <div class="create-new-product-form">
 
@@ -118,6 +120,7 @@
         </div>
         <%   }); %>
     </div>
+    <%- include ("partial/footer") %>
 </body>
 
 </html>
