--- a/views/detailProductPage.ejs
+++ b/views/detailProductPage.ejs
@@ -10,7 +10,9 @@
         </div>
     </div>
 <!-- Navbar -->
-    <%- include ("partial/navbar.ejs") %>
+    <%- include ("partial/navbar") %>
+ 
+    <%- include ("partial/logout") %>
 
 <!-- Product -->
     
