--- a/views/getNewPassword.ejs
+++ b/views/getNewPassword.ejs
@@ -1,6 +1,13 @@
+<%- include ("partial/header") %
+<%- include ("partial/navbar") %>
+        
+<%- include ("partial/logout") %>
+
 <h1>Hello, reset your password here</h1>
 
 <form action="/reset" method="post">
     <input type="email" name="resetMail" placeholder="your email">
     <button type="submit">Get new Password</button>
 </form>
+
+<%- include ("partial/footer") %>
