--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,12 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-</head>
+<%- include ("partial/header") %>
+<%- include ("partial/navbar") %>
+<%- include ("partial/logout") %>v
 
 <body>
     <h2>Log in</h2>
@@ -19,12 +13,10 @@
     <h3>Forgot password? </h3>
     <a href="/reset">Send new</a>
 
-    <h4><a href="/loginadmin">Log in as Admin</a></h4>
-
     <h4><a href="/register">Don´t have an account?</a></h4>
 
 
-
+    <%- include ("partial/footer") %>
 </body>
 
 </html>
