--- a/views/partial/navbar.ejs
+++ b/views/partial/navbar.ejs
@@ -1,25 +1,35 @@
 <div class="burger-container">
-    <button type="button" class="hamburger-button"><i class="fas fa-bars fa-2x menu" aria-hidden="true"></i></button>
+    <button type="button" class="hamburger-button"><i class="fas fa-bars fa-lg menu" aria-hidden="true"></i></button>
+    <div class="searchbar-container">
+            <!-- <input type="text" class="input-search" placeholder="Search Products"> -->
+            <div class="search-icon"></div>
+    </div>
+
+
+    <div class="logo"></div>
+    <div class="wishlistandcart">
+            <div class="wishlist"></div>
+            <div class="cart"></div>
+            
+            
+    </div>
+    
+
 </div>
 <nav class="nav-container">
-    <div class="searchbar-container">
-        <div class="search-icon"></div>
-
-    <input type="text" class="input-search" placeholder="Search Products">
-    <!-- <hr> -->
-    </div>
+    
     <!-- <hr> -->
     <ul class="men-women">
-        <li class="fat bottom"><a href="#">Shop all </a></li>
-        <li class="fat"><a href="#">Women</a></li>
-        <li><a href="#">T-Shirts</a></li>
-        <li><a href="#">Crewnecks</a></li>
-        <li><a href="#">Hoodies</a></li>
+        <li class="fat bottom"><a href="/products">Shop all </a></li>
+        <li class="fat"><a href="/women">Women</a></li>
+        <li><a href="/women">T-Shirts</a></li>
+        <li><a href="/women">Crewnecks</a></li>
+        <li><a href="/women">Hoodies</a></li>
         
-        <li class="fat"><a href="#">Men</a></li>
-        <li><a href="#">T-Shirts</a></li>
-        <li><a href="#">Crewnecks</a></li>
-        <li><a href="#">Hoodies</a></li>
+        <li class="fat"><a href="/men">Men</a></li>
+        <li><a href="/men">T-Shirts</a></li>
+        <li><a href="/men">Crewnecks</a></li>
+        <li><a href="/men">Hoodies</a></li>
 
     </ul>
 
@@ -28,14 +38,14 @@
    <ul class="about">
         <li class="free-shipping">Free shipping on orders over 990 sek, and free returns</li>
         
-        <li><a href="#">Subcribe</a></li>
-        <li><a href="#">Store Locator</a></li>
-        <li><a href="#">Customer Service</a></li>
+        <li><a href="/men">Subcribe</a></li>
+        <li><a href="/men">Store Locator</a></li>
+        <li><a href="/men">Customer Service</a></li>
     </ul>
 
     <ul class="sign-in">
-        <li><a href="#">Sign in</a></li>
-        <li><a href="#">Shipping to: Worldwide</a></li>
+        <li><a href="/men">Sign in</a></li>
+        <li><a href="/men">Shipping to: Worldwide</a></li>
 
     </ul>
     
