--- a/views/reset.ejs
+++ b/views/reset.ejs
@@ -1,1 +1,6 @@
-hej
+<%- include ("partial/header") %>
+<%- include ("partial/navbar") %>
+<%- include ("partial/logout") %>
+
+Reset your password <a href="">HERE</a>
+<%- include ("partial/footer") %>
