--- a/views/resetPassword.ejs
+++ b/views/resetPassword.ejs
@@ -1,3 +1,7 @@
+<%- include ("partial/header") %>
+
+<%- include ("partial/navbar") %>
+<%- include ("partial/logout") %>
 <form action=“/reset/:token” method=“post”>
 
     <input type=hidden name=token id=“” value="<%= user.resetToken %>">
@@ -6,3 +10,5 @@
     <button type=“submit”>Reset password</button>
     
 </form>
+
+<%- include ("partial/footer") %>
