--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -1,3 +1,9 @@
+// $background-image:(
+//     background-size: cover,
+//     background-position: center,
+//     background-repeat: no-repeat
+// ) ;
+
 .opacity-cover {
     background-color: white;
     opacity: 60%;
@@ -16,7 +22,7 @@ body {
         visibility: hidden;
         z-index: 999;
         width: 100%;
-        height: 95vh;
+        // height: 95vh;
         position: absolute;
         top: 35px;
         transform: translateX(-130%);
@@ -25,34 +31,7 @@ body {
         transition: 1s;
         margin-top: 50px;
 
-        .searchbar-container {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            width: 92%;
-            padding: 5px 20px;
-            margin: 0 4%;
-            border-bottom: 1px solid #7f8375;
 
-            .search-icon {
-                background-image: url("../public/assets/searchicon.png");
-                background-color: #cccccc;
-                height: 30px;
-                width: 30px;
-                background-position: center;
-                background-repeat: no-repeat;
-                background-size: cover;
-            }
-
-            .input-search {
-                width: 100%;
-                border: none;
-                
-                background: white;
-                padding: 20px 0 10px 40px;
-
-            }
-        }
 
         .about,
         .sign-in,
@@ -123,14 +102,74 @@ body {
 
     .burger-container {
         width: 100%;
-        padding: 10px 20px;
-        text-align: left;
+        // padding: 10px 20px;
+        display: flex;
+        flex-direction: row;
         z-index: 1000;
+        justify-content: space-between;
+        .logo {
+            background-image: url("../public/assets/Logo-gecko.png");
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+            height: 40px;
+            width: 60px;
+        }
+
+    .wishlistandcart{
+        .cart {
+            background-image: url("../public/assets/cart.png");
+            height: 20px;
+            width: 20px;
+        
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+        }
+
+        .wishlist{
+            background-image: url("../public/assets/heart.png");
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+            height: 20px;
+            width: 20px;
+
+
+        }
+
+    }
+
+        .searchbar-container {
+            display: flex;
+
+
+            .search-icon {
+                background-image: url("../public/assets/searchicon.png");
+                background-color: #cccccc;
+                height: 25px;
+                width: 25px;
+                background-position: center;
+                background-repeat: no-repeat;
+                background-size: cover;
+            }
+
+            // .input-search {
+            //     margin-top: 20px;
+            //     width: 100%;
+            //     border: none;
+            //     background: white;
+
+            // }
+        }
 
         .hamburger-button {
             border: none;
             background: white;
-            margin-top: 18px;
         }
     }
+
+
+
+
 }
