--- a/views/checkout.ejs
+++ b/views/checkout.ejs
@@ -2,6 +2,8 @@
 <html lang="en">
     <%- include ("partial/header.ejs") %>
 <body>
+
+
     <div class="container-fluid">
         <div class="row">
             <div class="col-12" id="subscribebox">
@@ -9,8 +11,8 @@
             </div>
         </div>
     </div>
-<!-- Navbar -->
-    <%- include ("partial/navbar.ejs") %>
+    <%- include ("partial/navbar") %>
+    <%- include ("partial/logout") %>
 
 <!-- Checkout -->
     
