--- a/views/loginAdmin.ejs
+++ b/views/loginAdmin.ejs
@@ -1,11 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-</head>
+<%- include ("partial/header") %>
+<%- include ("partial/navbar") %>
+<%- include ("partial/logout") %>
 <body>
     <h2>Log in as admin</h2>
     <form action="/loginadmin" method="POST">
@@ -15,5 +10,7 @@
     </form>
 
     <%= errorMessage %>
+
+    <%- include ("partial/footer") %>
 </body>
 </html>
