--- a/views/productPage.ejs
+++ b/views/productPage.ejs
@@ -1,5 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
+
 <%- include ("partial/header.ejs") %>
 
 <body>
@@ -12,6 +11,7 @@
     </div>
     <!-- Navbar -->
     <%- include ("partial/navbar.ejs") %>
+    <%- include ("partial/logout") %>
 
     <section id="productPage">
         <!-- Categories -->
@@ -61,7 +61,7 @@
 
     
 
-
+    <%- include ("partial/footer") %>
 
 </body>
 
