--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,3 +1,8 @@
+<%- include ("partial/header") %>
+
+<%- include ("partial/navbar") %>
+<%- include ("partial/logout") %>
+
 <h2>Register</h2>
 <form action="/register" method="POST">
     <input type="text" name="firstName" placeholder="firstname">
@@ -6,3 +11,5 @@
     <input type="password" name="password" placeholder="password">
     <button type="submit">Sign up</button>
 </form>
+
+<%- include ("partial/footer") %>
