--- a/views/startPage.ejs
+++ b/views/startPage.ejs
@@ -12,7 +12,7 @@
     </div>
     
     <%- include ("partial/navbar.ejs") %>
-
+    <%- include ("partial/logout") %>
     
         <div class="scrolling-wrapper">
                 <% startPageProducts.newArrivals.forEach(newArrival => { %>
