--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,6 +1,6 @@
 <%- include ("partial/header") %>
 <%- include ("partial/navbar") %>
-<%- include ("partial/logout") %>v
+<%- include ("partial/logout") %>
 
 <body>
     <h2>Log in</h2>
