--- a/views/productPage.ejs
+++ b/views/productPage.ejs
@@ -43,6 +43,7 @@
                     </div>
                     <div class="productPrice">
                         <span class="price"><%= product.price%> SEK</span>
+                        <a href="/wishlist/<%=product._id %>"> <img src="../public/assets/heart.png" /></a> 
                     </div>
                 </div>
             </div>
