--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -7,6 +7,8 @@
     <%- include ("partial/navbar") %>
     <%- include ("partial/logout") %>
 
+    <span>Love!</span>
+
     <div class="create-new-product-form">
 
         <div class="create-new-product-form-header">
