--- a/scss/_checkout.scss
+++ b/scss/_checkout.scss
@@ -1,10 +1,144 @@
 
-#checkout-container {
+#checkout-body {
 
     display: flex;
     justify-content: center;
+    flex-direction: column;
+    width: 90%;
+    margin: 60px 5% 0 5%;
+    
+
+    .header-container {
+        width: 100%;
+        border-bottom: 1px solid rgb(225, 225, 225);
+        padding: 10px 0;
+
+        span {
+            text-transform: uppercase;
+        }
+    }
+
+    .all-products-container {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+
+        .product-container {
+            width: 100%;
+            display: flex;
+            flex-direction: row;
+            flex-wrap: nowrap;
+            padding: 20px 0;
+            border-bottom: 1px solid rgb(225, 225, 225);
+            font-size: 0.9rem;
+    
+            .image-container {
+                width: 30%;
+                margin: 0 0 30px 0;
+
+                img {
+                    width: 90%;
+                }
+            }
+    
+            .info-container {
+                width: 50%;
+                display: flex;
+                flex-direction: column;
+
+                .container {
+                    padding: 6px 0;
+                    
+                    span {
+                        margin-right: 25px;
+                    }
+                }
+
+                .title-container {
+                    text-transform: uppercase;
+                    padding: 0;
+                    font-size: 1rem;
+                }
+
+                .price-container {
+                    text-transform: uppercase;
+                    padding: 0;
+                    margin-bottom: 30px;
+                    font-size: 1rem;
+                }
+
+                .quantity-container {
+                    margin-top: 20px;
+                }
+            }
+    
+            .total-item-price-container {
+                width: 20%;
+                display: flex;
+                flex-direction: column;
+                justify-content: space-between;
+                text-align: right;
+                text-transform: uppercase;
+                font-size: 1rem;
+                
+            }
+        }
+    }
+
+    .order-info-container {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        padding: 20px 0;
+
+        .info-container {
+            width: 100%;
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            padding: 10px 0;
+        }
+        .order-value-container {
+            
+
+        }
+
+        .delivery-container {
+            
+
+        }
+
+        .promotion-container {
+            
+
+        }
+
+        .total-price-container {
+            border-top: 1px solid rgb(225, 225, 225);
+            padding: 20px 0;
+            margin-top: 10px;
+
+        }
+
+        .checkout-button-container {
+            text-align: center;
+            margin: 20px 0;
+
+            button {
+                width: 60%;
+                height: 40px;
+                background-color:#7f8375;
+                color: white;
+                border-color: rgb(225, 225, 225);
+                text-transform: uppercase;
+            }
+        }
 
 
+
+
+
+    }
 
 
 
