--- a/views/partial/navbar.ejs
+++ b/views/partial/navbar.ejs
@@ -1,12 +1,17 @@
 <div class="burger-container">
-    <button type="button" class="hamburger-button"><i class="fas fa-bars fa-lg menu" aria-hidden="true"></i></button>
-    <div class="searchbar-container">
-        <!-- <input type="text" class="input-search" placeholder="Search Products"> -->
-        <div class="search-icon"></div>
+
+    <div class="burgerandsearch">
+        <button type="button" class="hamburger-button"><i class="fas fa-bars fa-lg menu"
+                aria-hidden="true"></i></button>
+        <div class="search-icon">
+
+        </div>
     </div>
 
+    <div class="logo">
 
-    <div class="logo"></div>
+    </div>
+
     <div class="wishlistandcart">
         <div class="wishlist"></div>
         <div class="cart"></div>
@@ -51,5 +56,5 @@
 
 </nav>
 <div class="cover">
-    
+
 </div>
